--- a/dev-reptile-java/pom.xml
+++ b/dev-reptile-java/pom.xml
@@ -48,6 +48,11 @@
 			<version>2.1.3</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.8</version>
+		</dependency>
 	</dependencies>
 	<build>
 	</build>
